# QA_Guru_python_5_HW_18_Venv_Poetry_Dependences

./: pyproject.toml
