[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["Nadzeya Rakach <nadezda.rakach@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_project"}]

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0.rc2"
pytest = "7.3.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
